# SLAM

./: .gitignore  README.md
ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eitenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  useGeometry.cpp
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: CMakeLists.txt
ch5/stereo/: CMakeLists.txt  stereoVision.cpp
ch6/: CMakeLists.txt
